--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <p id="output"></p>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/4.0.2/tesseract.min.js"></script>
+    <script src="https://unpkg.com/tesseract.js@4.1.1"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
