--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image to Text Converter</title>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/tesseract.js@4.1.1"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Image to Text Converter</h1>
+        <h2>Image to Text Converter</h2>
         <input type="file" id="imageUpload" accept="image/*">
-        <img id="preview" src="#" alt="Image Preview" style="display:none;">
+        <img id="preview">
         <button id="convertBtn">Convert to Text</button>
-        <p id="output"></p>
-    </div>
 
-    <script src="https://unpkg.com/tesseract.js@4.1.1"></script>
+        <div id="output-container">
+            <h3>Extracted Text:</h3>
+            <textarea id="output" readonly></textarea>
+            <button id="copyBtn">Copy Text</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
