--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image to Text Converter</title>
-    <script src="https://unpkg.com/tesseract.js@4.1.1"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tesseract.js/4.0.2/tesseract.min.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <header>
-            <h1>🖼️ Image to Text Converter</h1>
-            <p>Extract text from images quickly and accurately!</p>
-        </header>
+        <h1>🖼️ Image to Text Converter</h1>
 
-        <div class="upload-section">
-            <label for="imageUpload" class="upload-box">
-                <input type="file" id="imageUpload" accept="image/*" hidden>
-                <span>📤 Upload Image</span>
-            </label>
-            <img id="preview" alt="Image Preview">
+        <!-- Drag and Drop Upload -->
+        <div class="upload-box" id="dropArea">
+            <p>Drag & Drop Image Here or <span id="uploadText">Click to Upload</span></p>
+            <input type="file" id="imageUpload" accept="image/*" hidden>
         </div>
+
+        <!-- Image Preview -->
+        <img id="preview" src="#" alt="Image Preview" style="display: none;">
 
         <button id="convertBtn" class="btn">🚀 Convert to Text</button>
 
+        <!-- Output Section -->
         <div id="output-container">
             <h2>📝 Extracted Text:</h2>
             <textarea id="output" readonly></textarea>
-            <button id="copyBtn" class="btn copy-btn">📋 Copy Text</button>
+            <button id="copyBtn" class="btn">📋 Copy</button>
+            <button id="downloadBtn" class="btn">📥 Download</button>
         </div>
     </div>
 
