--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 
         <!-- Drag and Drop Upload -->
         <div class="upload-box" id="dropArea">
-            <p>Drag & Drop Image Here or <span id="uploadText">Click to Upload</span></p>
-            <input type="file" id="imageUpload" accept="image/*" hidden>
+            <p>Drag & Drop Image Here</p>
         </div>
+
+        <!-- Upload Button -->
+        <input type="file" id="imageUpload" accept="image/*" hidden>
+        <button id="uploadBtn" class="btn">📂 Upload Image</button>
 
         <!-- Image Preview -->
         <img id="preview" src="#" alt="Image Preview" style="display: none;">
@@ -33,6 +36,7 @@
         </div>
     </div>
 
+   
 
     <script src="script.js"></script>
 </body>
