--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <div class="container">
         <h1>🖼️ Image to Text Converter</h1>
 
-        <!-- Drag and Drop Upload -->
-        <div class="upload-box" id="dropArea">
-            <p>Drag & Drop Image Here</p>
-        </div>
-
         <!-- Upload Button -->
         <input type="file" id="imageUpload" accept="image/*" hidden>
         <button id="uploadBtn" class="btn">📂 Upload Image</button>
@@ -36,7 +31,9 @@
         </div>
     </div>
 
-   
+    <footer>
+        <p>Built with ❤️ using Tesseract.js</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
