--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <button id="downloadBtn" class="btn">📥 Download</button>
         </div>
     </div>
-
-   
+   <footer>
+        <p>Built with ❤️ using Tesseract.js</p>
+    </footer
     <script src="script.js"></script>
 </body>
 
