--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             <button id="downloadBtn" class="btn">📥 Download</button>
         </div>
     </div>
-   <footer>
+
+    <footer>
         <p>Built with ❤️ using Tesseract.js</p>
-    </footer
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
