--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+</html><!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,6 +13,11 @@
 <body>
     <div class="container">
         <h1>🖼️ Image to Text Converter</h1>
+
+        <!-- Drag and Drop Upload -->
+        <div class="upload-box" id="dropArea">
+            <p>Drag & Drop Image Here</p>
+        </div>
 
         <!-- Upload Button -->
         <input type="file" id="imageUpload" accept="image/*" hidden>
