--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <footer>
-        <p>Built with ❤️ using Tesseract.js</p>
+        <p>thank you </p>
     </footer>
 
     <script src="script.js"></script>
